# TFG

./: .gitignore  README.md  nohup.out  pyproject.toml  run_pipeline.sh  setup_gcp.sh
data/finetuning/: datos_crudos.csv
models/ape_tokenizer/: special_tokens.json  tokenizer.json  unicode_mapping.json  vocab.json
src/tfg_molecular_generation/: ape_hf_wrapper.py  ape_tokenizer.py  data_prep.py  inference.py  inference_utils.py  pretrain.py  train_tokenizer.py  training_dashboard.py
