[project]
name = "tfg-molecular-generation"
version = "0.1.0"
description = "De-novo molecular design with AI for DYRK1A kinase inhibition (based on Wang 2025)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "rdkit>=2023.3.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "transformers>=4.30.0",
    "jupyter>=1.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "datasets>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
